# lib

./: CMakeLists.txt  run.sh
animals/: CMakeLists.txt  animals.cpp
animals/include/: animals.h
nlohmann/: CMakeLists.txt
parser/: CMakeLists.txt  parser.cpp
parser/include/: abstract_parser.h  jsonparser.h  parser.h  xmlparser.h
pugixml/src/: CMakeLists.txt
shared_ptr/: CMakeLists.txt
shared_ptr/include/: shared_ptr.h
templated_vector/: CMakeLists.txt
templated_vector/tests/: CMakeLists.txt  tests.cpp
templated_vector/vector/include/: vector.h
tests/: CMakeLists.txt  main.cpp  note.xml
tests/tests/: animals_tests.cpp  parser_tests.cpp  sharedptr_tests.cpp  uptr_tests.cpp  vector_tests.cpp
tests/tests/data/: broken.json  note.xml
unique_ptr/: CMakeLists.txt  Makefile  cmake_install.cmake  run.sh
unique_ptr/include/: unique_ptr.h
unique_ptr/tests/: CMakeLists.txt  tests.cpp
unique_ptr/unique_ptr/: Makefile  cmake_install.cmake
unique_ptr/unique_ptr/include/: unique_ptr.h
vector/: CMakeLists.txt  Makefile  cmake_install.cmake
vector/include/: vector.h
vector/vector/: Makefile  cmake_install.cmake
